--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
   margin-right: 15%;
   padding: 0;
   font-family: 'Lucida Grande', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-size: 14px;
+  font-size: 1em;
   font-weight: light;
   /* text-align: justify; */
 }
@@ -16,7 +16,7 @@ h1, h2 {
 }
 
 h2 {
-  font-size: 24px;
+  font-size: 2em;
   font-weight: light;
   color: #000000;
 }
@@ -74,13 +74,13 @@ a:hover.live {
 }
 
 #header h1 {
-  font-size: 60px;
-  letter-spacing: -5px;
+  font-size: 4em;
+  letter-spacing: -0.1em;
   margin-bottom: 0;
 }
 
 #header span {
-  font-size: 20px;
+  font-size: 1.3em;
   font-weight: normal;
   margin-top: 0;
   color: #606060;
