Better for mobile?

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
   margin-right: 15%;
   padding: 0;
   font-family: 'Lucida Grande', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-size: 1em;
+  font-size: 2vw;
   font-weight: light;
   /* text-align: justify; */
 }
@@ -75,7 +75,7 @@ a:hover.live {
 
 #header h1 {
   font-size: 4em;
-  letter-spacing: -0.1em;
+  letter-spacing: -0.05em;
   margin-bottom: 0;
 }
 
