--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,26 @@
+@media (max-width : 599px) {
+  body {
+    margin-top: 0;
+    margin-bottom: 1em;
+    margin-left: 5%;
+    margin-right: 10%;
+    font-size: 3vw;
+  }
+}
+
+@media (min-width : 600px) {
+  body {
+    margin-top: 0;
+    margin-bottom: 1em;
+    margin-left: 10%;
+    margin-right: 15%;
+    font-size: 1em;
+  }
+}
+
 body {
-  margin-top: 1em;
-  margin-bottom: 1em;
-  margin-left: 10%;
-  margin-right: 15%;
   padding: 0;
   font-family: 'Lucida Grande', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-size: 2vw;
   font-weight: light;
   /* text-align: justify; */
 }
@@ -80,7 +95,7 @@ a:hover.live {
 }
 
 #header span {
-  font-size: 1.3em;
+  font-size: 1.4em;
   font-weight: normal;
   margin-top: 0;
   color: #606060;
