--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@media (max-width : 599px) {
+@media (max-width : 10cm) {
   body {
     margin-top: 0;
     margin-bottom: 1em;
@@ -8,7 +8,7 @@
   }
 }
 
-@media (min-width : 600px) {
+@media (min-width : 10cm) {
   body {
     margin-top: 0;
     margin-bottom: 1em;
