--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width : 320px) {
+@media only screen and (min-device-width : 320px) {
   body {
     margin-top: 0;
     margin-bottom: 1em;
@@ -8,7 +8,7 @@
   }
 }
 
-@media only screen and (min-width : 768px) {
+@media only screen and (min-device-width : 768px) {
   body {
     margin-top: 0;
     margin-bottom: 1em;
