--- a/layouts/profile.html
+++ b/layouts/profile.html
@@ -12,7 +12,11 @@
 
     <section id="header">
       <h1>{{name}}</h1>
-      <span>{{role}} / {{place}}</span>
+      <div class="item">
+        <div class="tagline">{{role}} / {{place}}</div>
+        <span class="thing"><a href="{{dblp}}">@dblp</a></span>
+        <span class="thing"><a href="{{github}}">@GitHub</a></span>
+      </div>
     </section>
 
     <section id="about">
