--- a/layouts/profile.html
+++ b/layouts/profile.html
@@ -12,10 +12,10 @@
 
     <section id="header">
       <h1>{{name}}</h1>
+      <div class="tagline">{{role}} / {{place}}</div>
       <div class="item">
-        <div class="tagline">{{role}} / {{place}}</div>
-        <span class="thing"><a href="{{dblp}}">@dblp</a></span>
-        <span class="thing"><a href="{{github}}">@GitHub</a></span>
+        <span class="tag"><a href="{{dblp}}">@dblp</a></span>
+        <span class="tag"><a href="{{github}}">@GitHub</a></span>
       </div>
     </section>
 
