--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,10 @@ a:hover.live {
   padding-bottom: 1em;
 }
 
+.tag {
+  padding: 0.2em;
+}
+
 .head {
   display: table-row;
 }
@@ -97,7 +101,8 @@ a:hover.live {
 #header .tagline {
   font-size: 1.4em;
   font-weight: normal;
-  margin-top: 0;
+  margin-top: 0em;
+  margin-bottom: 0.5em;
   color: #606060;
 }
 
