--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,6 @@ body {
   padding: 0;
   font-family: 'Lucida Grande', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: light;
-  /* text-align: justify; */
 }
 
 h1, h2 {
@@ -36,11 +35,10 @@ h2 {
   color: #000000;
 }
 
-div {
-  color: #606060;
-}
-
 p {
+  line-height: 1.2;
+  margin-top: 0;
+  margin-bottom: 1em;
   color: #606060;
 }
 
@@ -49,19 +47,38 @@ a {
   text-decoration: none;
 }
 
-a:link.live, a:visited.live {
+a[href] {
   color: #606060;
 }
 
-a:hover.live {
+a[href]:hover {
   color: #F08080;
   text-decoration: underline;
+}
+
+a.info {
+  color: #A0A0A0;
+}
+
+.title {
+  font-size: 4em;
+  letter-spacing: -0.05em;
+  margin-bottom: 0;
+}
+
+.tagline {
+  font-size: 1.45em;
+  font-weight: normal;
+  margin-top: 0em;
+  margin-bottom: 0.5em;
+  color: #606060;
 }
 
 .item {
   display: table;
   width: 100%;
   padding-bottom: 1em;
+  color: #606060;
 }
 
 .tag {
@@ -75,7 +92,6 @@ a:hover.live {
 .thing {
   display: table-cell;
   padding-right: 1em;
-  color: #606060;
 }
 
 .place {
@@ -91,24 +107,3 @@ a:hover.live {
   font-style: italic;
   color: #A0A0A0;
 }
-
-#header h1 {
-  font-size: 4em;
-  letter-spacing: -0.05em;
-  margin-bottom: 0;
-}
-
-#header .tagline {
-  font-size: 1.4em;
-  font-weight: normal;
-  margin-top: 0em;
-  margin-bottom: 0.5em;
-  color: #606060;
-}
-
-#about p {
-  line-height: 1.2;
-  margin-top: 0;
-  margin-bottom: 1em;
-}
-
