--- a/layouts/profile.html
+++ b/layouts/profile.html
@@ -11,7 +11,7 @@
   <body>
 
     <section id="header">
-      <h1>{{name}}</h1>
+      <h1 class="title">{{name}}</h1>
       <div class="tagline">{{role}} / {{place}}</div>
       <div class="item">
         <span class="tag"><a href="{{dblp}}">@dblp</a></span>
@@ -35,7 +35,7 @@
             <span class="place">{{{name}}}</span>
           </div>
           <div class="info">
-            <a href="{{URL}}" class="live info">{{desc}}</a>
+            <a href="{{URL}}" class="info">{{desc}}</a>
           </div>
         </div>
       {{/activities}}
@@ -48,10 +48,10 @@
           <div class="head">
             <span class="thing">
               {{#URL}}
-                <a href="{{.}}" class="live">{{{title}}}</a>
+                <a href="{{.}}">{{{title}}}</a>
               {{/URL}}
               {{^URL}}
-                <a class="to-appear">{{{title}}}</a>
+                <a>{{{title}}}</a>
               {{/URL}}
             </span>
             <span class="place">{{{place}}}</span>
@@ -66,7 +66,7 @@
         <div class="item">
           <div class="head">
             <span class="thing">
-              <a href="{{URL}}" class="live">{{name}}</a>
+              <a href="{{URL}}">{{name}}</a>
             </span>
           </div>
           <div class="info">{{desc}}</div>
@@ -79,7 +79,7 @@
       {{#contact}}
         <div class="item">{{{address}}}</div>
         <div class="item">
-          E / <a class="live" href="mailto:{{email}}">{{email}}</a>
+          E / <a href="mailto:{{email}}">{{email}}</a>
         </div>
         {{#phone}}
           <div class="item">T / {{number}} ({{country}})</div>
