--- a/layouts/profile.html
+++ b/layouts/profile.html
@@ -35,7 +35,7 @@
             <span class="place">{{{name}}}</span>
           </div>
           <div class="info">
-            <a href="{{URL}}" class="info">{{desc}}</a>
+            <a href="{{URL}}">{{desc}}</a>
           </div>
         </div>
       {{/activities}}
