--- a/layouts/profile.html
+++ b/layouts/profile.html
@@ -56,6 +56,11 @@
             </span>
             <span class="place">{{{place}}}</span>
           </div>
+          {{#info}}
+            <div class="info">
+              {{{.}}}
+            </div>
+          {{/info}}
         </div>
       {{/publications}}
     </section>
