--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@ a[href]:hover {
 
 .info {
   display: table-row;
-  font-size: smaller;
+  font-size: 70%;
   font-style: italic;
   color: #A0A0A0;
 }
