--- a/layouts/profile.html
+++ b/layouts/profile.html
@@ -84,10 +84,10 @@
       {{#contact}}
         <div class="item">{{{address}}}</div>
         <div class="item">
-          E / <a href="mailto:{{email}}">{{email}}</a>
+          <a href="mailto:{{email}}">{{email}}</a>
         </div>
         {{#phone}}
-          <div class="item">T / {{number}} ({{country}})</div>
+          <div class="item">{{number}} ({{country}})</div>
         {{/phone}}
       {{/contact}}
     </section>
