--- a/layouts/profile.html
+++ b/layouts/profile.html
@@ -10,89 +10,106 @@
   </head>
 
   <body>
+    <div class="container">
+      <div class="column left">
 
-    <section id="header">
-      <h1 class="title">{{name}}</h1>
-      <div class="tagline">{{role}} / {{place}}</div>
-      <div class="item">
-        {{#links}}
-          <span class="tag"><a href="{{url}}">@{{name}}</a></span>
-        {{/links}}
-      </div>
-    </section>
-
-    <section id="about">
-      <h2>About</h2>
-      <div>
-        {{{about}}}
-      </div>
-    </section>
-
-    <section id="activities">
-      <h2>Professional Activities</h2>
-      {{#activities}}
-        <div class="item">
-          <div class="head">
-            <span class="thing">{{role}}</span>
-            <span class="place">{{{name}}}</span>
+        <section id="header">
+          <h1 class="title">{{name}}</h1>
+          <div class="tagline">{{role}} / {{place}}</div>
+          <div class="item">
+            {{#links}}
+              <span class="tag"><a href="{{url}}">@{{name}}</a></span>
+            {{/links}}
           </div>
-          <div class="info">
-            <a href="{{URL}}">{{desc}}</a>
-          </div>
-        </div>
-      {{/activities}}
-    </section>
+        </section>
 
-    <section id="publications">
-      <h2>Publications</h2>
-      {{#publications}}
-        <div class="item">
-          <div class="head">
-            <span class="thing">
-              {{#URL}}
-                <a href="{{.}}">{{{title}}}</a>
-              {{/URL}}
-              {{^URL}}
-                <a>{{{title}}}</a>
-              {{/URL}}
-            </span>
-            <span class="place">{{{place}}}</span>
+        <section id="about">
+          <h2>About</h2>
+          <div>
+            {{{about}}}
           </div>
-          {{#info}}
-            <div class="info">
-              {{{.}}}
+        </section>
+
+        <section id="activities">
+          <h2>Professional Activities</h2>
+          {{#activities}}
+            <div class="item">
+              <div class="head">
+                <span class="thing">{{role}}</span>
+                <span class="place">{{{name}}}</span>
+              </div>
+              <div class="info">
+                <a href="{{URL}}">{{desc}}</a>
+              </div>
             </div>
-          {{/info}}
-        </div>
-      {{/publications}}
-    </section>
+          {{/activities}}
+        </section>
 
-    <section id="software">
-      <h2>Software</h2>
-      {{#software}}
-        <div class="item">
-          <div class="head">
-            <span class="thing">
-              <a href="{{URL}}">{{name}}</a>
-            </span>
-          </div>
-          <div class="info">{{desc}}</div>
-        </div>
-      {{/software}}
-    </section>
+      </div>
+      <div class="column right">
 
-    <section id="contact">
-      <h2>Contact</h2>
-      {{#contact}}
-        <div class="item">{{{address}}}</div>
-        <div class="item">
-          <a href="mailto:{{email}}">{{email}}</a>
-        </div>
-        {{#phone}}
-          <div class="item">{{number}} ({{country}})</div>
-        {{/phone}}
-      {{/contact}}
-    </section>
+        <section id="publications">
+          <h2>Publications</h2>
+          {{#publications}}
+            <div class="item">
+              <div class="head">
+                <span class="thing">
+                  {{#URL}}
+                    <a href="{{.}}">{{{title}}}</a>
+                  {{/URL}}
+                  {{^URL}}
+                    <a>{{{title}}}</a>
+                  {{/URL}}
+                </span>
+                <span class="place">{{{place}}}</span>
+              </div>
+              {{#info}}
+                <div class="info">
+                  {{{.}}}
+                </div>
+              {{/info}}
+            </div>
+          {{/publications}}
+        </section>
+
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="column left">
+
+        <section id="contact">
+          <h2>Contact</h2>
+          {{#contact}}
+            <div class="item">{{{address}}}</div>
+            <div class="item">
+              <a href="mailto:{{email}}">{{email}}</a>
+            </div>
+            {{#phone}}
+              <div class="item">{{number}} ({{country}})</div>
+            {{/phone}}
+          {{/contact}}
+        </section>
+
+      </div>
+      <div class="column right">
+
+        <section id="software">
+          <h2>Software</h2>
+          {{#software}}
+            <div class="item">
+              <div class="head">
+                <span class="thing">
+                  <a href="{{URL}}">{{name}}</a>
+                </span>
+              </div>
+              <div class="info">{{desc}}</div>
+            </div>
+          {{/software}}
+        </section>
+
+      </div>
+    </div>
 
   </body>
 
