--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ body {
 	width: 45%;
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-device-width: 480px) {
 	.column { margin: 1% 0 1% 0%;}
 	.left, .right { width: 100%; }
 }
