Updated small device font size.

--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,7 @@ body {
 @media only screen and (max-device-width: 480px) {
 	.column { margin: 1% 0 1% 0%;}
 	.left, .right { width: 100%; }
+  .font-size: 3vw;
 }
 
 section {
