--- a/layouts/profile.html
+++ b/layouts/profile.html
@@ -6,11 +6,10 @@
     <link href='http://fonts.googleapis.com/css?family=IM+Fell+DW+Pica|IM+Fell+DW+Pica+SC|IM+Fell+Double+Pica|IM+Fell+Double+Pica+SC' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" media="screen" href="css/style.css">
     <title>{{name}}</title>
-    <script type="text/javascript" src="js/Hyphenator.js"></script>
   </head>
 
   <body>
-    <div class="container">
+    <div class="row">
       <div class="column left">
 
         <section id="header">
@@ -75,7 +74,7 @@
       </div>
     </div>
 
-    <div class="container">
+    <div class="row">
       <div class="column left">
 
         <section id="contact">
