--- a/css/style.css
+++ b/css/style.css
@@ -1,78 +1,24 @@
 body {
   font-family: 'IM Fell Double Pica', serif;
   padding: 0;
-  margin: 0;
-}
-
-.container {
-  clear: both;
-  padding: 0;
-  margin: 0;
-}
-
-.column {
-  display: block;
-  float: left;
-  margin: 0 0 0 2%;
-}
-
-.container:first-child {
-  margin-left: 0;
-}
-
-.container:before,
-.container:after {
-  content: "";
-  display: table;
-}
-
-.container:after {
-  clear: both;
-}
-
-.container {
-  zoom: 1;
-}
-
-.left {
-	width: 45%;
-}
-.right {
-	width: 45%;
-}
-
-@media only screen and (max-device-width: 480px) {
-	.column { margin: 1% 0 1% 0%;}
-	.left, .right { width: 100%; }
-  body {
-    margin-top: 0;
-    margin-bottom: 1em;
-    margin-left: 5%;
-    margin-right: 5%;
-    font-size: 3vw;
-    -webkit-font-smoothing: antialiased;
-  }
+  margin: 1em 1em 1em 1em;
 }
 
 section {
-  padding-left: 1em;
-  padding-right: 1em;
-}
-
-h1, h2 {
-  margin-bottom: 0.5em;
+  margin: 1em 0 1em 0;
+  padding: 0 1em 0 1em;
 }
 
 h2 {
+  margin: 0 0 0.3em 0;
   font-size: 2em;
   font-weight: light;
   color: #000000;
 }
 
 p {
-  line-height: 1.2;
-  margin-top: 0;
-  margin-bottom: 1em;
+  margin: 0 0 1em 0;
+  line-height: 1.3;
   color: #606060;
 }
 
@@ -106,28 +52,27 @@ a[href]:hover {
   color: #A0A0A0;
 }
 
+#header {
+  white-space: nowrap;
+}
+
 .title {
   font-size: 4em;
   letter-spacing: -0.05em;
-  margin-bottom: 0;
+  margin: 0 0 0 0;
 }
 
 .tagline {
   font-size: 1.45em;
   font-weight: normal;
-  margin-top: 0em;
-  margin-bottom: 0.5em;
+  margin: 0 0 0.5em 0;
   color: #606060;
-}
-
-#header {
-  white-space: nowrap;
 }
 
 .item {
   display: table;
   width: 100%;
-  padding-bottom: 1em;
+  margin-bottom: 0.8em;
   color: #606060;
 }
 
@@ -154,3 +99,52 @@ a[href]:hover {
   color: #A0A0A0;
 }
 
+.row {
+  clear: both;
+  padding: 0;
+  margin: 0;
+}
+
+.row:first-child {
+  margin-left: 0;
+}
+
+.row:before,
+.row:after {
+  content: "";
+  display: table;
+}
+
+.row:after {
+  clear: both;
+}
+
+.row {
+  zoom: 1;
+}
+
+.column {
+  display: block;
+  float: left;
+  margin: 0 1% 0 1%;
+}
+
+.left {
+	width: 48%;
+}
+.right {
+	width: 48%;
+}
+
+@media only screen and (max-device-width: 480px) {
+	.column { margin: 1% 0 1% 0%;}
+	.left, .right { width: 100%; }
+  body {
+    margin-top: 0;
+    margin-bottom: 1em;
+    margin-left: 5%;
+    margin-right: 5%;
+    font-size: 3vw;
+    -webkit-font-smoothing: antialiased;
+  }
+}
