--- a/layouts/profile.html
+++ b/layouts/profile.html
@@ -14,7 +14,7 @@
 
         <section id="header">
           <h1 class="title">{{name}}</h1>
-          <div class="tagline">{{role}} / {{place}}</div>
+          <div class="tagline">{{role}} / {{{place}}}</div>
           <div class="item">
             {{#links}}
               <span class="tag"><a href="{{url}}">@{{name}}</a></span>
@@ -38,7 +38,7 @@
                 <span class="place">{{{name}}}</span>
               </div>
               <div class="info">
-                <a href="{{URL}}">{{desc}}</a>
+                <a href="{{URL}}">{{{desc}}}</a>
               </div>
             </div>
           {{/activities}}
@@ -85,7 +85,7 @@
               <a href="mailto:{{email}}">{{email}}</a>
             </div>
             {{#phone}}
-              <div class="item">{{number}} ({{country}})</div>
+              <div class="item">{{number}} ({{{country}}})</div>
             {{/phone}}
           {{/contact}}
         </section>
@@ -99,10 +99,10 @@
             <div class="item">
               <div class="head">
                 <span class="thing">
-                  <a href="{{URL}}">{{name}}</a>
+                  <a href="{{URL}}">{{{name}}}</a>
                 </span>
               </div>
-              <div class="info">{{desc}}</div>
+              <div class="info">{{{desc}}}</div>
             </div>
           {{/software}}
         </section>
