--- a/layouts/index.mustache
+++ b/layouts/index.mustache
@@ -4,8 +4,9 @@
     <meta charset='utf-8'>
     <meta name="description" class="template" content="{{name}}: {{role}} / {{place}}">
     <link href='http://fonts.googleapis.com/css?family=IM+Fell+DW+Pica|IM+Fell+DW+Pica+SC|IM+Fell+Double+Pica|IM+Fell+Double+Pica+SC' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" media="screen" href="css/common.css">
-    <link rel="stylesheet" media="screen" href="css/index.css">
+    <link rel="stylesheet" media="screen" href="css/screen.css">
+    <link rel="stylesheet" media="print" href="css/print.css">
+    <link rel="stylesheet" href="css/index.css">
     <title>{{name}}</title>
   </head>
 
