--- a/layouts/cv.mustache
+++ b/layouts/cv.mustache
@@ -82,7 +82,7 @@
       {{#activities}}
         <div class="item">
           <span class="article-title">{{{role}}}</span>.
-          <span class="article-volume"><a href="{{URL}}">{{{desc}}}</a></span>
+          <span class="article-volume">{{#URL}}<a href="{{URL}}">{{/URL}}{{{desc}}}{{#URL}}</a>{{/URL}}</span>
           ({{{acronym}}}).
         </div>
       {{/activities}}
