--- a/css/screen.css
+++ b/css/screen.css
@@ -4,6 +4,22 @@ body {
   margin: 1em 1em 1em 1em;
 }
 
+abbr {
+  font-family: 'IM Fell French Canon SC', Georgia, serif;
+  text-transform: lowercase;
+}
+
+@media only screen and (max-device-width: 480px) {
+  body {
+    font-family: sans-serif;;
+  }
+  abbr {
+    font-family: sans-serif;;
+    text-transform: uppercase;
+    font-size: 80%;
+  }
+}
+
 section {
   margin: 2em 0 1em 0;
   padding: 0 1em 0 1em;
@@ -20,11 +36,6 @@ p {
   margin: 0 0 1em 0;
   line-height: 1.4;
   color: #606060;
-}
-
-abbr {
-  font-family: 'IM Fell French Canon SC', Georgia, serif;
-  text-transform: lowercase;
 }
 
 a {
