--- a/css/cv.css
+++ b/css/cv.css
@@ -12,6 +12,10 @@ body {
   font-weight: light;
 }
 
+.list span::after {
+  content: ", "
+}
+
 @media only screen and (max-device-width: 480px) {
 	.column { margin: 1% 0 1% 0%;}
 	.left, .right { width: 100%; }
