--- a/layouts/cv.mustache
+++ b/layouts/cv.mustache
@@ -109,6 +109,17 @@
       {{/publications}}
     </section>
 
+    <section id="collaborators">
+      <h2>Collaborators and Coauthors</h2>
+      <div class="list">
+        <p>
+        {{#coauthors}}
+          <span><strong>{{name}}</strong> ({{affiliation}})</span>
+        {{/coauthors}}
+        </p>
+      </div>
+    </section>
+
     <section id="software">
       <h2>Software</h2>
       {{#software}}
