--- a/layouts/cv.mustache
+++ b/layouts/cv.mustache
@@ -114,7 +114,7 @@
       <div class="list">
         <p>
         {{#coauthors}}
-          <span><strong>{{name}}</strong> ({{affiliation}})</span>
+          <span><strong>{{{name}}}</strong> ({{{affiliation}}})</span>
         {{/coauthors}}
         </p>
       </div>
