--- a/layouts/publications.html.mustache
+++ b/layouts/publications.html.mustache
@@ -30,9 +30,9 @@
               {{/doi}}
             </span>
             In <span class="article-volume">{{{book}}}</span>
-            ({{{acronym}}}){{#series}}, {{{.}}}{{/series}}{{#volume}}, volume {{{.}}}{{/volume}}{{#issue}}, issue {{{.}}}{{/issue}}{{#pages}}, pages {{{.}}}{{/pages}}.
+            (<nobr>{{{acronym}}}</nobr>){{#series}}, {{{.}}}{{/series}}{{#volume}}, volume {{{.}}}{{/volume}}{{#issue}}, issue {{{.}}}{{/issue}}{{#pages}}, pages {{{.}}}{{/pages}}.
             {{{publisher}}}, {{year}}.
-            {{#pdf}}<span class="screen-only">(<a href="{{.}}"><abbr>PDF</abbr></a>)</span>{{/pdf}}
+            {{#pdf}}<span class="screen-only">(<a href="{{.}}">PDF</a>)</span>{{/pdf}}
           </li>
         {{/issue}}
       {{/publications}}
@@ -55,9 +55,9 @@
               {{/doi}}
             </span>
             In <span class="article-volume">{{{book}}}</span>
-            ({{{acronym}}}){{#series}}, {{{.}}}{{/series}}{{#volume}}, volume {{{.}}}{{/volume}}{{#issue}}, issue {{{.}}}{{/issue}}{{#pages}}, pages {{{.}}}{{/pages}}.
+            (<nobr>{{{acronym}}}</nobr>){{#series}}, {{{.}}}{{/series}}{{#volume}}, volume {{{.}}}{{/volume}}{{#issue}}, issue {{{.}}}{{/issue}}{{#pages}}, pages {{{.}}}{{/pages}}.
             {{{publisher}}}, {{year}}.
-            {{#pdf}}<span class="screen-only">(<a href="{{.}}"><abbr>PDF</abbr></a>)</span>{{/pdf}}
+            {{#pdf}}<span class="screen-only">(<a href="{{.}}">PDF</a>)</span>{{/pdf}}
           </li>
         {{/issue}}
       {{/publications}}
