--- a/layouts/index.html.mustache
+++ b/layouts/index.html.mustache
@@ -26,7 +26,9 @@
         <section id="about">
           <h2>About</h2>
           <div>
-            {{{about}}}
+            {{#about}}
+              <p>{{{.}}}</p>
+            {{/about}}
           </div>
         </section>
 
@@ -38,7 +40,7 @@
                 <span class="lhs">{{role}}</span>
                 <span class="rhs">
                   {{#URL}}<a href="{{URL}}">{{/URL}}
-                  {{{acronym}}}
+                  <nobr>{{{acronym}}}</nobr>
                   {{#URL}}</a>{{/URL}}
                 </span>
               </div>
@@ -62,7 +64,7 @@
                     <a>{{{title}}}</a>
                   {{/pdf}}
                 </span>
-                <span class="rhs">{{{acronym}}}</span>
+                <span class="rhs"><nobr>{{{acronym}}}</nobr></span>
               </div>
               {{#info}}
                 <div class="info">
@@ -99,7 +101,7 @@
         <section id="contact">
           <h2>Contact</h2>
           {{#contact}}
-            <div class="item">{{{address}}}</div>
+            <div class="item">{{#address}}{{.}}<br>{{/address}}</div>
             <a href="mailto:{{email}}">{{email}}</a><br>
             {{#phone}}
               <a href="tel:{{number}}">{{number}}</a> {{#note}}({{{.}}}){{/note}}<br>
