--- a/layouts/index.html.mustache
+++ b/layouts/index.html.mustache
@@ -15,7 +15,7 @@
 
         <section id="header">
           <h1 class="title">{{name}}</h1>
-          <div class="tagline">{{role}} / {{{place}}}</div>
+          <div class="tagline">{{role}} {{#place}} / {{{.}}} {{/place}}</div>
           <div class="item">
             {{#links}}
               <span class="tag"><a href="{{url}}">@{{name}}</a></span>
